--- a/soot_hopper/src/main/resources/log4j.properties
+++ b/soot_hopper/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 log4j.properties
 
 # Root logger option
-log4j.rootLogger=WARN, file
+log4j.rootLogger=INFO, file
 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
