--- a/soot_hopper/src/main/resources/application.conf
+++ b/soot_hopper/src/main/resources/application.conf
@@ -8,5 +8,7 @@ paths = {
         connectionPool = HikariCP
         connectionTimeout = 10000
     }
-    numThreads=100
+    numThreads=10
+    maxConnection=11
+    maxThreads=10
 }
