--- a/soot_hopper/Dockerfile
+++ b/soot_hopper/Dockerfile
@@ -83,5 +83,6 @@ ENV LD_LIBRARY_PATH=/usr/lib/
 RUN cd /home/bounder/; sbt assembly
 
 RUN mkdir /home/bounder_host
+ENV BOUNDER_JAR=/home/bounder/target/scala-2.13/soot_hopper-assembly-0.1.jar
 
 CMD ["/bin/bash"]
