--- a/soot_hopper/Dockerfile
+++ b/soot_hopper/Dockerfile
@@ -1,6 +1,7 @@
-FROM ubuntu:18.04
+#FROM ubuntu:18.04 # note: trying 20.04 because of glibc 2.29 req for infer
+FROM ubuntu:20.04 
 RUN apt-get update
-RUN apt-get install -y gcc make sudo cmake apt-transport-https software-properties-common binutils g++
+RUN apt-get install -y gcc make sudo cmake apt-transport-https software-properties-common binutils g++ curl
 RUN apt-get install -y wget apt-transport-https gnupg python
 RUN wget -qO - https://adoptopenjdk.jfrog.io/adoptopenjdk/api/gpg/key/public | sudo apt-key add -
 RUN echo "deb https://adoptopenjdk.jfrog.io/adoptopenjdk/deb bionic main" | sudo tee /etc/apt/sources.list.d/adoptopenjdk.list 
@@ -8,9 +9,17 @@ RUN apt-get update
 RUN apt-get -y install adoptopenjdk-11-hotspot
 RUN mkdir /home/bounder
 
-# 3. sbt
-RUN echo "deb https://dl.bintray.com/sbt/debian /" | sudo tee -a /etc/apt/sources.list.d/sbt.list
-RUN sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823
+## 3. sbt
+#RUN echo "deb https://dl.bintray.com/sbt/debian /" | sudo tee -a /etc/apt/sources.list.d/sbt.list
+#RUN sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823
+#RUN sudo apt-get update
+#RUN sudo apt-get install -y sbt
+
+# SBT
+RUN echo "deb https://repo.scala-sbt.org/scalasbt/debian all main" | sudo tee /etc/apt/sources.list.d/sbt.list
+RUN echo "deb https://repo.scala-sbt.org/scalasbt/debian /" | sudo tee /etc/apt/sources.list.d/sbt_old.list
+RUN curl -sL "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0x2EE0EA64E40A89B84B2DF73499E82A75642AC823" | sudo -H gpg --no-default-keyring --keyring gnupg-ring:/etc/apt/trusted.gpg.d/scalasbt-release.gpg --import
+RUN sudo chmod 644 /etc/apt/trusted.gpg.d/scalasbt-release.gpg
 RUN sudo apt-get update
 RUN sudo apt-get install -y sbt
 
@@ -34,7 +43,7 @@ RUN apt-get update -qq -y \
  && rm -rf "$Z3_DIR"
 
 RUN apt-get update
-RUN apt-get install -y zip unzip curl
+RUN apt-get install -y zip unzip
 
 ## Android SDK
 # Set up environment variables
@@ -85,5 +94,28 @@ ENV LD_LIBRARY_PATH=/usr/lib/
 
 RUN mkdir /home/bounder_host
 ENV BOUNDER_JAR=/home/bounder/target/scala-2.13/soot_hopper-assembly-0.1.jar
+
+# Install infer for baseline comparison
+# mkdir the man/man1 directory due to Debian bug #863199
+RUN apt-get update && \
+    mkdir -p /usr/share/man/man1 && \
+    apt-get install --yes --no-install-recommends \
+      libc6-dev \
+      xz-utils \
+      zlib1g-dev && \
+    rm -rf /var/lib/apt/lists/*
+
+
+# Download the Infer release
+RUN INFER_VERSION=v1.1.0; \
+    cd /opt && \
+    curl -sL \
+      https://github.com/facebook/infer/releases/download/${INFER_VERSION}/infer-linux64-${INFER_VERSION}.tar.xz | \
+    tar xJ && \
+    rm -f /infer && \
+    ln -s ${PWD}/infer-linux64-$INFER_VERSION /infer
+
+# Install infer
+ENV PATH /infer/bin:${PATH}
 
 CMD ["/bin/bash"]
