Fix serialization bug in run configurations for Driver

--- a/soot_hopper/Dockerfile
+++ b/soot_hopper/Dockerfile
@@ -88,9 +88,6 @@ RUN apt-get install -y sqlite
 ARG COMMITHASH=unknown
 RUN echo $COMMITHASH >/home/bounder/commithash.txt
 RUN rm -r /home/bounder 2>/dev/null
-COPY . /home/bounder/
-ENV LD_LIBRARY_PATH=/usr/lib/
-#RUN cd /home/bounder/; sbt assembly
 
 RUN mkdir /home/bounder_host
 ENV BOUNDER_JAR=/home/bounder/target/scala-2.13/soot_hopper-assembly-0.1.jar
@@ -117,5 +114,12 @@ RUN INFER_VERSION=v1.1.0; \
 
 # Install infer
 ENV PATH /infer/bin:${PATH}
+
+RUN touch $(date +%s) # force rebuild from here every time to grab new jar
+COPY . /home/bounder/
+ENV LD_LIBRARY_PATH=/usr/lib/
+#RUN cd /home/bounder/; sbt assembly
+
+
 
 CMD ["/bin/bash"]
