--- a/soot_hopper/Dockerfile
+++ b/soot_hopper/Dockerfile
@@ -76,8 +76,10 @@ RUN mkdir "$ANDROID_HOME" .android \
   && touch /root/.android/repositories.cfg
 
 # Install platform tools
+#  Note: commented out the following platforms since they are old and I don't think we use them anymore
+# "platforms;android-10" "platforms;android-11" "platforms;android-12" "platforms;android-13" "platforms;android-14" "platforms;android-15"
 RUN cd /root/android-sdk-linux/cmdline-tools/bin \
-    && ./sdkmanager --sdk_root=$ANDROID_HOME "platform-tools" "platforms;android-10" "platforms;android-11" "platforms;android-12" "platforms;android-13" "platforms;android-14" "platforms;android-15" "platforms;android-16" "platforms;android-17" "platforms;android-18" "platforms;android-19" "platforms;android-20" "platforms;android-21" "platforms;android-22" "platforms;android-23" "platforms;android-24" "platforms;android-25" "platforms;android-26" "platforms;android-27" "platforms;android-7" "platforms;android-8" "platforms;android-9"
+    && ./sdkmanager --sdk_root=$ANDROID_HOME "platform-tools"  "platforms;android-16" "platforms;android-17" "platforms;android-18" "platforms;android-19" "platforms;android-20" "platforms;android-21" "platforms;android-22" "platforms;android-23" "platforms;android-24" "platforms;android-25" "platforms;android-26" "platforms;android-27" "platforms;android-7" "platforms;android-8" "platforms;android-9" "platforms;android-30"
 #
 RUN  cd /root/android-sdk-linux/cmdline-tools/bin \
     && ./sdkmanager --sdk_root=$ANDROID_HOME "platforms;android-29"
